--- a/readme.me
+++ b/readme.me
@@ -15,8 +15,17 @@ akentala
 4. *Configure Git*
   1. git config
 
-5. *Push to Staging Server*
-  1. git push stageServer
+5.*Configure Apache*
 
-6. *Push to Production Server*
+6. *Configure Local and Remote Directory*
+
+7.*Merge*
+
+8. *Test*
+  1. stageServer
+
+9. *Push to Staging Server*
+  1. git push stageServer master
+
+10. *Push to Production Server*
   1. git push prodServer master
